# dynamixel_control

ski_main/: CMakeLists.txt  package.xml
ski_main/include/ski_main/: ski_main_header.h
ski_main/include/test_dynamixel/: dynamixel_MX106.h
ski_main/src/: ski_main_node.cpp  test_dynamixel_node.cpp
